--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,47 @@
- .env
-node_modules
+# 依赖目录
+node_modules/
+npm-debug.log
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+# 环境变量文件
+.env
+.env.*
+!.env.example
+
+# 构建输出
+dist/
+build/
+*.tsbuildinfo
+
+# 数据目录
+.data/
+data/
+
+# 日志
+logs/
+*.log
+npm-debug.log*
+
+# 编辑器配置
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# 操作系统文件
+.DS_Store
+Thumbs.db
+
+# 测试覆盖报告
+coverage/
+
+# 临时文件
+tmp/
+temp/
+.cache/
