--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@agentkai/core",
-  "version": "1.6.0",
-  "description": "AgentKai核心包，提供AI助手系统的基础功能",
+  "name": "@agentkai/browser",
+  "version": "1.0.0",
+  "description": "AgentKai的浏览器环境特定实现",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -20,36 +20,29 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Peiiii/AgentKai.git",
-    "directory": "packages/core"
+    "directory": "packages/browser"
   },
   "publishConfig": {
     "access": "public"
   },
   "keywords": [
     "ai",
-    "autonomous",
-    "memory",
-    "decision-making",
-    "goal-oriented",
     "agent",
-    "kai"
+    "kai",
+    "browser",
+    "web"
   ],
   "author": "Peiiii",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "hnswlib-node": "^2.1.1",
-    "openai": "^4.89.0",
-    "rxjs": "^7.8.2",
-    "uuid": "^9.0.1"
+    "@agentkai/core": "workspace:*",
+    "hnswlib-wasm": "^0.8.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.17.25",
-    "@types/uuid": "^9.0.8",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2"
   }
-}
+} 
