--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
+    "target": "ES2015",
+    "module": "CommonJS",
+    "lib": ["ES2015", "ES2020", "DOM"],
     "declaration": true,
-    "sourceMap": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    "composite": true,
-    "incremental": false
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node"
   }
 } 
