--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,6 +50,7 @@
   "author": "Peiiii",
   "license": "MIT",
   "dependencies": {
+    "@agentkai/node": "workspace:*",
     "@agentkai/core": "workspace:*",
     "commander": "^12.0.0",
     "dotenv": "^16.4.5",
