--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "pnpm -r build",
     "dev:cli": "pnpm --filter @agentkai/cli dev",
+    "dev:web": "pnpm --filter @agentkai/web dev",
     "test": "pnpm -r test",
     "lint": "pnpm -r lint",
     "format": "pnpm -r format",
@@ -19,7 +20,7 @@
     "version-and-commit": "changeset version && git add . && git commit -m 'chore: version packages'",
     "release": "pnpm build && changeset publish",
     "publish-all": "pnpm version-and-commit && pnpm release && git push && git push --tags",
-    "link-global": "pnpm build && pnpm --filter @agentkai/cli install -g"
+    "link-global": "pnpm build && pnpm --filter @agentkai/cli install -g && pnpm --filter @agentkai/node install -g && pnpm --filter @agentkai/browser install -g && pnpm --filter @agentkai/core install -g"
   },
   "repository": {
     "type": "git",
