--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "scripts": {
         "build": "pnpm -r build",
         "dev:cli": "pnpm --filter @agentkai/cli dev",
-        "dev:web": "pnpm --filter @agentkai/web dev",
         "test": "pnpm -r test",
         "lint": "pnpm -r lint",
         "format": "pnpm -r format",
@@ -18,7 +17,7 @@
         "changeset": "changeset",
         "version-packages": "changeset version",
         "version-and-commit": "changeset version && git add . && git commit -m 'chore: version packages'",
-        "release": "pnpm build && changeset publish",
+        "release": "pnpm --filter @agentkai/* build && changeset publish",
         "publish-all": "pnpm version-and-commit && pnpm release && git push && git push --tags",
         "link-global": "pnpm build && pnpm --filter @agentkai/cli install -g && pnpm --filter @agentkai/node install -g && pnpm --filter @agentkai/browser install -g && pnpm --filter @agentkai/core install -g",
         "deploy:web": "pnpm build && ossutil64 cp -r -u packages/web/dist oss://agentkai -c ./.ossutilconfig.local"
