--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
-    "module": "CommonJS",
-    "lib": ["ES2015", "ES2020", "DOM"],
-    "declaration": true,
-    "strict": true,
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "esModuleInterop": true,
+    "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node"
+    "isolatedModules": true,
+    "composite": true,
+    "declaration": true
   }
 } 
