--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agentkai/web",
+  "name": "agentkai-web",
   "private": true,
   "version": "1.0.0",
   "description": "AgentKai的Web前端应用",
@@ -27,22 +27,26 @@
   "author": "Peiiii",
   "license": "MIT",
   "dependencies": {
-    "@agentkai/browser": "latest",
+    "@agentkai/browser": "^2.1.5",
+    "@agentkai/core": "^2.0.7",
     "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.11.0",
     "highlight.js": "^11.9.0",
     "marked": "^9.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.20.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/node": "^22.13.11",
+    "@types/react": "^18.3.19",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react-swc": "^3.8.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
@@ -50,10 +54,11 @@
     "globals": "^15.15.0",
     "postcss": "^8.4.31",
     "rimraf": "^5.0.5",
+    "rollup": "^4.36.0",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.2"
   }
 }
