--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "release": "pnpm --filter @agentkai/* build && changeset publish",
         "publish-all": "pnpm version-and-commit && pnpm release && git push && git push --tags",
         "link-global": "pnpm build && pnpm --filter @agentkai/cli install -g && pnpm --filter @agentkai/node install -g && pnpm --filter @agentkai/browser install -g && pnpm --filter @agentkai/core install -g",
-        "deploy:web": "pnpm build && ossutil64 cp -r -u packages/web/dist oss://agentkai -c ./.ossutilconfig.local"
+        "deploy:web": "ossutil64 cp -r -u web/dist oss://agentkai -c ./.ossutilconfig.local"
       },
     "repository": {
         "type": "git",
