--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -7,6 +7,7 @@
     "declarationMap": true,
     "composite": true,
     "incremental": true,
+    "emitDeclarationOnly": true,
     "lib": ["ES2015", "ES2020", "DOM"],
     "moduleResolution": "node",
     "esModuleInterop": true
