--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,10 +2,10 @@
   "name": "@agentkai/core",
   "version": "3.10.0",
   "description": "AgentKai核心包，提供AI助手系统的基础功能",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "files": [
-    "dist",
+    "src",
     "README.md",
     "LICENSE"
   ],
@@ -37,6 +37,7 @@
   "author": "Peiiii",
   "license": "MIT",
   "dependencies": {
+    "@ai-sdk/ui-utils": "^1.2.8",
     "dotenv": "^16.4.5",
     "hnswlib-node": "^2.1.1",
     "openai": "^4.89.0",
