--- a/web/package.json
+++ b/web/package.json
@@ -28,8 +28,9 @@
   "author": "Peiiii",
   "license": "MIT",
   "dependencies": {
-    "@agentkai/browser": "^2.1.5",
-    "@agentkai/core": "^2.0.7",
+    "@agentkai/browser": "workspace:*",
+    "@agentkai/core": "workspace:*",
+    "@ai-sdk/react": "^1.2.9",
     "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.11.0",
