--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "release": "pnpm --filter @agentkai/* build && changeset publish",
         "publish-all": "pnpm version-and-commit && pnpm release && git push && git push --tags",
         "link-global": "pnpm build && pnpm --filter @agentkai/cli install -g && pnpm --filter @agentkai/node install -g && pnpm --filter @agentkai/browser install -g && pnpm --filter @agentkai/core install -g",
-        "deploy:web": "ossutil64 cp -r -u web/dist oss://agentkai -c ./.ossutilconfig.local"
+        "deploy:web": "pnpm --filter agentkai-web deploy:cdn"
     },
     "repository": {
         "type": "git",
